# chip8-madness

./: .gitignore  .gitmodules  Cargo.toml  Makefile
arduino/: Cargo.toml  README.md
arduino/src/: main.rs
chip8/: Cargo.toml
chip8-std/: Cargo.toml
chip8-std/src/: main.rs
chip8-web/: Cargo.toml  index.html
chip8-web/src/: dom.rs  lib.rs
chip8/src/: app.rs  chip8.rs  display.rs  lib.rs  memory.rs
